# py-rizmi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  weekly.yml
backend/: license_check.py
config/: settings.py
docs/: api-stability.md
docs/adr/: 0001-pyqt6-licensing.md
scripts/: gen_keypair.py  get_machine_id.py  issue_license.py
src/core/: hwid.py  keypair.py  license_issuer.py  license_token.py  license_validator.py
src/gui/: app.py  custom_theme.json  theme.py
src/gui/tabs/: generate_tab.py  hwid_tab.py  keymanager_tab.py  viewer_tab.py
src/gui/views/: generate_view.py  guide_view.py  hwid_view.py  keymanager_view.py  viewer_view.py
src/gui/widgets/: dynamic_list.py  step_card.py
src/py_rizmi/: __init__.py
src/py_rizmi/_internal/: logging.py
src/py_rizmi/cli/: __init__.py  app.py
src/py_rizmi/cli/commands/: __init__.py  keys.py  license_cmd.py  machine_id.py
src/py_rizmi/core/: __init__.py  clock_guard.py  crypto.py  hwid.py  keypair.py  license_issuer.py  license_validator.py
src/py_rizmi/gui/: app.py  theme.py
src/py_rizmi/gui/views/: generate_view.py  guide_view.py  hwid_view.py  keymanager_view.py  viewer_view.py
src/py_rizmi/gui/widgets/: dynamic_list.py  step_card.py
src/py_rizmi/integrations/: __init__.py  validation.py
src/py_rizmi/models/: __init__.py  license_payload.py
temp/: future-improvments.md
tests/: conftest.py  test_hwid.py  test_keypair.py  test_license_issuer.py  test_license_validator.py
tests/contract/: test_license_format_compat.py
tests/contract/fixtures/pre_migration/: license.lic  private.pem  public.pem
tests/e2e/: test_no_extras_gui.py
tests/gui/: test_generate_view.py  test_guide_view.py  test_hwid_view.py  test_keymanager_view.py  test_viewer_view.py
tests/integration/: test_issue_validate_roundtrip.py
tests/regression/: test_issue_042_hwid_case_sensitivity.py
tests/unit/core/: test_clock_guard.py  test_hwid.py  test_license_issuer.py  test_license_validator.py
tests/unit/integrations/: test_validation.py
tests/unit/models/: test_license_payload.py
