[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-rizmi"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "PyQt6>=6.6.0",
    "pyqtdarktheme>=2.1.0",
    "markdown>=3.3.0",
    "nuitka>=4.1.3",
    "py-machineid>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "nuitka>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
]
