[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py-rizmi"
dynamic = ["version"]
description = "Offline RSA-signed license management — CLI, GUI, and Python API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Ramzi Hadrouk" }]
dependencies = [
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "PyQt6>=6.6",
    "pyqtdarktheme>=2.1.0",
    "markdown>=3.3.0",
    "nuitka>=4.1.3",
    "py-machineid>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "nuitka>=4.0.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/py_rizmi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py_rizmi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
