[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py-rizmi"
dynamic = ["version"]
description = "Offline RSA-signed license management — CLI, GUI, and Python API."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Ramzi Hadrouk" }]
dependencies = [
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "typer>=0.12",
    "rich>=13.0",
    "py-machineid>=1.0.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.6", "pyqtdarktheme>=2.1.0", "markdown>=3.3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-qt",
    "pytest-mock",
    "pytest-xdist",
    "pytest-randomly",
    "hypothesis",
    "ruff",
    "mypy",
    "nuitka>=4.1.3",
]
all = ["py-rizmi[gui,dev]"]

[project.scripts]
rizmi = "py_rizmi.cli.app:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/py_rizmi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py_rizmi"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "py_rizmi/README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["qdarktheme", "markdown.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["py_rizmi.gui.*"]
ignore_errors = false

[tool.pytest.ini_options]
markers = ["slow: slower integration/GUI/e2e tests"]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
